<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_CONVAYOR_STATE" Id="{a101147d-ea86-4c99-97c2-f80e7395fae2}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_CONVAYOR_STATE :
(
	uninit,
	idle,
	do_move,
	st1,
	st2,
	st3,
	st4,
	st5,
	done,
	pause,
	error,
	homing,
	estop
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>