<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{7f0b71c9-3b96-49cc-b550-51f310230bab}">
    <Declaration><![CDATA[ //{attribute 'qualified_only'}
VAR_GLOBAL
	

	
	bValve: ARRAY[1..64] OF BOOL;
	//======================================== IO =====================================
	nanlogIn1 AT%I*:INT;
	rAnalogIn:REAL;
	//======================================== stations =============================== 
	supply_station_num: INT:=1;
	separate1_station_num: INT:=5;
	separate2_station_num: INT:=9;
	bullet_check_num: INT:=15;
	dispose_station_num:INT:=15;
	clean_station_num: INT:=23;
	primer_station_num: INT:=27;
	drop_station_num: INT:=33;
	
	total_ready:INT:=0;
	iNUMBER_OF_PISTONS:INT:=22;
	conv_length: INT:=1350;
	conv_height: INT:=290;
	num_of_carts:INT:=18;
	X_OFFSET: INT:=380; 
	Y_OFFSET: INT:=352;
	stPISTON_PARAM: ARRAY[1..22] OF  ST_PISTON;
	//fbPiston: ARRAY[1..22] OF FB_PISTON;
	
	fbCART: ARRAY[1..18] OF FB_CART;
	Axis_MAIN:FB_Axis;
	Axis_SUPPLY:FB_Axis;
	Axis_JACK1:FB_Axis;
	Axis_JACK2:FB_Axis;
	
	posArrX:ARRAY[1..36] OF INT;
	posArrY:ARRAY[1..36] OF INT;
	
	eMAIN_STATE: E_MAIN_STATE:= E_MAIN_STATE.uninit;
	eSUPPLY: E_STATION_STATE:=E_STATION_STATE.uninit;
	eSEPARATE1: E_STATION_STATE:=E_STATION_STATE.uninit;
	eSEPARATE2: E_STATION_STATE:=E_STATION_STATE.uninit;
	e_SEPARATE1: E_STATION_STATE:=E_STATION_STATE.uninit;
	e_SEPARATE2: E_STATION_STATE:=E_STATION_STATE.uninit;
	eCLEAN: E_STATION_STATE:=E_STATION_STATE.uninit;
	eDROP: E_STATION_STATE:=E_STATION_STATE.uninit;
	eMAIN_CONVAYOR_STATE: E_CONVAYOR_STATE:=E_CONVAYOR_STATE.uninit;
	eSUPPLY_CONVAYOR_STATE: E_CONVAYOR_STATE:=E_CONVAYOR_STATE.uninit;
	
	bSTART: BOOL:=FALSE;// start main state machine
	sup_RUNNING: BOOL:=FALSE;// supply id runing
	clean_RUNNING: BOOL:=FALSE;// cleaning runing
	bS1_RUNNING: BOOL:=FALSE; // station 1 is running
	bS2_RUNNING: BOOL:=FALSE; // station 2 is running
	bCONV_MAIN_INPOS: BOOL:=FALSE; // convayor in position
	bCONV_SUPPLY_INPOS: BOOL:=FALSE; // convayor in position
	bPAUSE_MAIN: BOOL:=FALSE;
	bINIT_MAIN: BOOL:=FALSE;
	b_E_STOP:BOOL:=FALSE;
	b_RESET:BOOL:=FALSE;
	bSafety_error:BOOL:=FALSE;
	b_sense_home1: BOOL:=TRUE;
	b_sense_home2: BOOL;
	b_sense_home3: BOOL:=TRUE;
	bManual_Mode:BOOL:=FALSE;
	bBulletSensor:BOOL:=FALSE;
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>