<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="SUPPLY_CONVAYOR" Id="{eda0e613-4119-4a2f-b321-c37443d08c24}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM SUPPLY_CONVAYOR
VAR
	bMOVE:BOOL :=FALSE;
	bSTARTUP: BOOL:=FALSE;
	rtrigNext: R_TRIG;
	counter: INT;
	tNext: TON;
	bHoming: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[


CASE eSUPPLY_CONVAYOR_STATE OF
	E_CONVAYOR_STATE.homing:
		bHoming:=TRUE;
	
	E_CONVAYOR_STATE.uninit:
		eSUPPLY_CONVAYOR_STATE:=E_CONVAYOR_STATE.idle;
	
	E_CONVAYOR_STATE.idle:
		//idle
	
	E_CONVAYOR_STATE.do_move: // start motion
		IF NOT Axis_SUPPLY.bBusy  AND NOT Axis_SUPPLY.bError THEN
			Axis_SUPPLY.rPos:=0;	
			Axis_SUPPLY.bSetPosition:=TRUE;	 
			
			Axis_SUPPLY.bDo_Step_FW:=TRUE;
			eSUPPLY_CONVAYOR_STATE:=E_CONVAYOR_STATE.st1;
		END_IF
		
	E_CONVAYOR_STATE.st1:
		Axis_SUPPLY.bSetPosition:=FALSE;
		IF Axis_SUPPLY.rActPos = 0 THEN
			eSUPPLY_CONVAYOR_STATE:=E_CONVAYOR_STATE.st2;	
		END_IF
		
	E_CONVAYOR_STATE.st2:
		IF Axis_SUPPLY.rActPos > (Axis_SUPPLY.rStep/2)	THEN
			
			eSUPPLY_CONVAYOR_STATE:=E_CONVAYOR_STATE.st3;
		END_IF


	E_CONVAYOR_STATE.st3:
		IF Axis_SUPPLY.bInPos THEN
			eSUPPLY_CONVAYOR_STATE:=E_CONVAYOR_STATE.done;
		END_IF
		
	E_CONVAYOR_STATE.done:
		//...
	
	E_CONVAYOR_STATE.pause:
	//paused
	
END_CASE
	]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>